frontend/test/should_pass/exectype_AssignMapAccessToVarUntyped.grg
using exectype;

rule r
{
	modify  {
		exec(n:map<int,int> =map<int,int>{} && i=n[k]);
	}
}