frontend/test/should_fail/exectype_AssignMapAccessToVar6.grg
using exectype;

rule r
{
	modify  {
		exec(m:map<A,int> =map<A,int> ;> aa:AA=varia && {h:string=m[aa]}); // map yields int, not string
	}
}